# Embedded_system_Lib

./: .gitattributes  README.md
AirPump/: README.md
AirPump/HostComputer/: 频率电流数据.xlsx
K210SLModuleDevelopment/: CHANGELOG.md
K210SLModuleDevelopment/Carmre/: dvp_cam.c  dvp_cam.h  gc2145.h  main.c
K210SLModuleDevelopment/Face_check/: PIN_Config.h  main.c  region_layer.c  region_layer.h
K210SLModuleDevelopment/Flash_TEST/: FLASH_W25.c  FLASH_W25.h  main.c
K210SLModuleDevelopment/GPIO_IRQ/: KEYPAD.c  KEYPAD.h  LED.c  LED.h  PIN_FUNC.h  TIME_K210.c  TIME_K210.h  main.c
K210SLModuleDevelopment/I2S_PCM_MIC/: PCM_MIC.c  PCM_MIC.h  PIN_Config.h  main.c
K210SLModuleDevelopment/ICM_TEST/: PIN_Config.h  main.c
K210SLModuleDevelopment/KeyPad_State_machine/: PIN_Config.h  main.c
K210SLModuleDevelopment/LCD_Show/: lcd.c  logo.c  main.c  pin_config.h
K210SLModuleDevelopment/LCD_Touch/: FT6236.c  FT6236.h  Pin_Config.h  i2c_ctl.c  i2c_ctl.h  main.c
Lift_Contorl_LVGL/: CMakeLists.txt  PIN_Config.h  System_Bsp.c  System_Bsp.h  main.c
Lift_Contorl_LVGL/GUI/GUI_APP/: MY_GUI.c  MY_GUI.h
Lift_Contorl_LVGL/GUI/LCD_Button/: Button.c  Button.h
Lift_Contorl_LVGL/GUI/LCD_SHOW/: lcd.c  lcd.h  st7789.c  st7789.h
Lift_Contorl_LVGL/GUI/LVGL/: lv_conf.h
Lift_Contorl_LVGL/GUI/LVGL/porting/: lv_port_disp.c  lv_port_indev.c
Lift_Contorl_LVGL/LOG_SYSTEM/: LOG.c
Lift_Contorl_LVGL/cmake/: common.cmake
Lift_Contorl_LVGL/lib/drivers/: rtc.c
Lift_Contorl_LVGL/lib/drivers/include/: dmac.h  i2s.h  spi.h  timer.h
ParkingLotSystem/: OLED.cpp  OLED_Font.h  sketch_may18b.ino
(+182 files in other folders)
